--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="header">
         <h1>ECAM Shop</h1>
     </header>
     <main id="main">
-            <div class="card">
-                <div class="card-body">
-                    <form class="form-inline my-2 my-lg-0"action="/api/search">
-                        <div class="d-flex w-100">
-                                <input class="form-control mr-sm-2 flex-grow-1" type="text" name="query">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        <form id="search" action="/api/search">
+            <input type="text" name="query">
+            <button type="submit">Search</button>
+        </form>
     </main>
     <nav id="drawer"></nav>
     <footer id="footer"></footer>
