--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="comp/shop-cart/shop-cart.js"></script>
 </head>
 <body>
     <header id="header">
         <h1>ECAM Shop</h1>
+        <shop-cart></shop-cart>
     </header>
     <main id="main">
         <form id="search" action="/api/search">
